Refactor code structure for improved readability and maintainability

--- a/client/src/locales/bn.json
+++ b/client/src/locales/bn.json
@@ -107,7 +107,7 @@
     "featureDescription": "আমাদের বিস্তৃত প্ল্যাটফর্মের সাথে ভ্রমণের সেরা অভিজ্ঞতা লাভ করুন, যা অবিস্মরণীয় অ্যাডভেঞ্চার খুঁজছেন আধুনিক ভ্রমণকারীদের জন্য তৈরি করা হয়েছে।",
     "whatOur": "আমাদের কী",
     "travelersSay": "ভ্রমণকারীরা বলেন",
-    "testimonialsDescription": "হাজার হাজার সন্তুষ্ট ভ্রমণকারীর সাথে যোগ দিন যারা TravelGrid দিয়ে আশ্চর্যজনক গন্তব্য আবিষ্কার করেছেন।",
+    "testimonialsDescription": "হাজার হাজার সন্তুষ্ট ভ্রমণকারীর সাথে যোগ দিন যারা planora দিয়ে আশ্চর্যজনক গন্তব্য আবিষ্কার করেছেন।",
     "getStarted": "শুরু করুন",
     "exploreDestinations": "গন্তব্য অন্বেষণ করুন",
     "featuredPackages": "বৈশিষ্ট্যযুক্ত প্যাকেজ",
@@ -262,7 +262,7 @@
   },
   "signup": {
     "title": "অ্যাকাউন্ট তৈরি করুন",
-    "subtitle": "TravelGrid-এ যোগ দিন এবং আপনার অ্যাডভেঞ্চার শুরু করুন",
+    "subtitle": "planora-এ যোগ দিন এবং আপনার অ্যাডভেঞ্চার শুরু করুন",
     "name": "পূর্ণ নাম",
     "namePlaceholder": "আপনার পূর্ণ নাম লিখুন",
     "email": "ইমেইল ঠিকানা",
