--- a/client/src/locales/gu.json
+++ b/client/src/locales/gu.json
@@ -105,7 +105,7 @@
     "featureDescription": "આધુનિક મુસાફરો માટે ડિઝાઇન કરેલા અમારા વ્યાપક પ્લેટફોર્મ સાથે યાત્રાનો શ્રેષ્ઠ અનુભવ કરો.",
     "whatOur": "અમારા",
     "travelersSay": "મુસાફરો શું કહે છે",
-    "testimonialsDescription": "TravelGrid સાથે અદ્ભુત સ્થળો શોધનારા હજારો સંતુષ્ટ મુસાફરોમાં જોડાઓ.",
+    "testimonialsDescription": "planora સાથે અદ્ભુત સ્થળો શોધનારા હજારો સંતુષ્ટ મુસાફરોમાં જોડાઓ.",
     "features": {
       "greatPrices": {
         "title": "શ્રેષ્ઠ કિંમતો",
@@ -253,7 +253,7 @@
   },
   "signup": {
     "title": "એકાઉન્ટ બનાવો",
-    "subtitle": "TravelGrid સાથે જોડાઓ અને તમારી સાહસિક યાત્રા શરૂ કરો",
+    "subtitle": "planora સાથે જોડાઓ અને તમારી સાહસિક યાત્રા શરૂ કરો",
     "name": "પૂર્ણ નામ",
     "namePlaceholder": "તમારું પૂર્ણ નામ દાખલ કરો",
     "email": "ઈમેઇલ સરનામું",
