--- a/client/src/locales/hi.json
+++ b/client/src/locales/hi.json
@@ -106,7 +106,7 @@
     "featureDescription": "आधुनिक यात्रियों के लिए डिज़ाइन किए गए हमारे व्यापक प्लेटफॉर्म के साथ यात्रा का सर्वश्रेष्ठ अनुभव करें।",
     "whatOur": "हमारे",
     "travelersSay": "यात्री क्या कहते हैं",
-    "testimonialsDescription": "TravelGrid के साथ अद्भुत स्थलों की खोज करने वाले हजारों संतुष्ट यात्रियों में शामिल हों।",
+    "testimonialsDescription": "planora के साथ अद्भुत स्थलों की खोज करने वाले हजारों संतुष्ट यात्रियों में शामिल हों।",
     "features": {
       "greatPrices": {
         "title": "बेहतरीन कीमतें",
@@ -254,7 +254,7 @@
   },
   "signup": {
     "title": "खाता बनाएं",
-    "subtitle": "TravelGrid से जुड़ें और अपनी यात्रा शुरू करें",
+    "subtitle": "planora से जुड़ें और अपनी यात्रा शुरू करें",
     "name": "पूरा नाम",
     "namePlaceholder": "अपना पूरा नाम दर्ज करें",
     "email": "ईमेल पता",
