--- a/client/src/locales/kn.json
+++ b/client/src/locales/kn.json
@@ -105,7 +105,7 @@
     "featureDescription": "ಮರೆಯಲಾಗದ ಸಾಹಸಗಳನ್ನು ಹುಡುಕುವ ಆಧುನಿಕ ಪ್ರಯಾಣಿಕರಿಗಾಗಿ ವಿನ್ಯಾಸಗೊಳಿಸಲಾದ ನಮ್ಮ ಸಮಗ್ರ ವೇದಿಕೆಯೊಂದಿಗೆ ಪ್ರಯಾಣದಲ್ಲಿ ಉತ್ತಮವಾದದ್ದನ್ನು ಅನುಭವಿಸಿ.",
     "whatOur": "ನಮ್ಮ",
     "travelersSay": "ಪ್ರಯಾಣಿಕರು ಏನು ಹೇಳುತ್ತಾರೆ",
-    "testimonialsDescription": "TravelGrid ನೊಂದಿಗೆ ಅದ್ಭುತ ಸ್ಥಳಗಳನ್ನು کشف ಮಾಡಿದ ಸಾವಿರಾರು ತೃಪ್ತ ಪ್ರಯಾಣಿಕರಲ್ಲಿ ಸೇರಿ.",
+    "testimonialsDescription": "planora ನೊಂದಿಗೆ ಅದ್ಭುತ ಸ್ಥಳಗಳನ್ನು کشف ಮಾಡಿದ ಸಾವಿರಾರು ತೃಪ್ತ ಪ್ರಯಾಣಿಕರಲ್ಲಿ ಸೇರಿ.",
     "features": {
       "greatPrices": {
         "title": "ಉತ್ತಮ ಬೆಲೆಗಳು",
@@ -253,7 +253,7 @@
   },
   "signup": {
     "title": "ಖಾತೆ ರಚಿಸಿ",
-    "subtitle": "TravelGrid ಗೆ ಸೇರಿ ಮತ್ತು ನಿಮ್ಮ ಸಾಹಸವನ್ನು ಪ್ರಾರಂಭಿಸಿ",
+    "subtitle": "planora ಗೆ ಸೇರಿ ಮತ್ತು ನಿಮ್ಮ ಸಾಹಸವನ್ನು ಪ್ರಾರಂಭಿಸಿ",
     "name": "ಪೂರ್ಣ ಹೆಸರು",
     "namePlaceholder": "ನಿಮ್ಮ ಪೂರ್ಣ ಹೆಸರು ನಮೂದಿಸಿ",
     "email": "ಇಮೇಲ್ ವಿಳಾಸ",
