--- a/client/src/locales/mr.json
+++ b/client/src/locales/mr.json
@@ -107,7 +107,7 @@
     "featureDescription": "आमच्या व्यापक प्लॅटफॉर्मसह प्रवासातील सर्वोत्तम अनुभव घ्या, जे विस्मरणीय साहस शोधणाऱ्या आधुनिक प्रवाशांसाठी तयार केले आहे.",
     "whatOur": "आमचे काय",
     "travelersSay": "प्रवासी म्हणतात",
-    "testimonialsDescription": "TravelGrid सह आश्चर्यकारक गंतव्ये शोधलेल्या हजारो समाधानी प्रवाशांसोबत सामील व्हा.",
+    "testimonialsDescription": "planora सह आश्चर्यकारक गंतव्ये शोधलेल्या हजारो समाधानी प्रवाशांसोबत सामील व्हा.",
     "getStarted": "सुरू करा",
     "exploreDestinations": "गंतव्ये शोधा",
     "featuredPackages": "विशेष पॅकेजेस",
@@ -262,7 +262,7 @@
   },
   "signup": {
     "title": "खाते तयार करा",
-    "subtitle": "TravelGrid मध्ये सामील व्हा आणि तुमचे साहस सुरू करा",
+    "subtitle": "planora मध्ये सामील व्हा आणि तुमचे साहस सुरू करा",
     "name": "पूर्ण नाव",
     "namePlaceholder": "तुमचे पूर्ण नाव प्रविष्ट करा",
     "email": "ईमेल पत्ता",
