--- a/client/src/locales/ta.json
+++ b/client/src/locales/ta.json
@@ -107,7 +107,7 @@
     "featureDescription": "நமது விரிவான தளத்துடன் பயணத்தின் சிறந்த அனுபவத்தைப் பெறுங்கள், இது மறக்க முடியாத சாகசங்களைத் தேடும் நவீன பயணிகளுக்காக உருவாக்கப்பட்டுள்ளது.",
     "whatOur": "எங்கள் என்ன",
     "travelersSay": "பயணிகள் கூறுகிறார்கள்",
-    "testimonialsDescription": "TravelGrid உடன் அற்புதமான இடங்களைக் கண்டறிந்த ஆயிரக்கணக்கான திருப்தியான பயணிகளுடன் சேர்ந்து கொள்ளுங்கள்.",
+    "testimonialsDescription": "planora உடன் அற்புதமான இடங்களைக் கண்டறிந்த ஆயிரக்கணக்கான திருப்தியான பயணிகளுடன் சேர்ந்து கொள்ளுங்கள்.",
     "getStarted": "தொடங்கு",
     "exploreDestinations": "இடங்களை ஆராயுங்கள்",
     "featuredPackages": "முன்னிலைப்படுத்தப்பட்ட தொகுப்புகள்",
@@ -262,7 +262,7 @@
   },
   "signup": {
     "title": "கணக்கு உருவாக்கு",
-    "subtitle": "TravelGrid இல் சேர்ந்து உங்கள் சாகசத்தைத் தொடங்குங்கள்",
+    "subtitle": "planora இல் சேர்ந்து உங்கள் சாகசத்தைத் தொடங்குங்கள்",
     "name": "முழு பெயர்",
     "namePlaceholder": "உங்கள் முழு பெயரை உள்ளிடவும்",
     "email": "மின்னஞ்சல் முகவரி",
