--- a/client/src/locales/te.json
+++ b/client/src/locales/te.json
@@ -107,7 +107,7 @@
     "featureDescription": "మా సమగ్ర ప్లాట్‌ఫారమ్‌తో ప్రయాణంలో ఉత్తమ అనుభవాన్ని పొందండి, ఇది మరపురాని సాహసాలను వెతుకుతున్న ఆధునిక ప్రయాణికుల కోసం రూపొందించబడింది.",
     "whatOur": "మా ఏమి",
     "travelersSay": "ప్రయాణికులు చెబుతారు",
-    "testimonialsDescription": "TravelGrid తో అద్భుతమైన గమ్యస్థానాలను కనుగొన్న వేలాది సంతృప్తి చెందిన ప్రయాణికులతో చేరండి.",
+    "testimonialsDescription": "planora తో అద్భుతమైన గమ్యస్థానాలను కనుగొన్న వేలాది సంతృప్తి చెందిన ప్రయాణికులతో చేరండి.",
     "getStarted": "ప్రారంభించండి",
     "exploreDestinations": "గమ్యస్థానాలను అన్వేషించండి",
     "featuredPackages": "ఫీచర్డ్ ప్యాకేజీలు",
@@ -262,7 +262,7 @@
   },
   "signup": {
     "title": "ఖాతా సృష్టించండి",
-    "subtitle": "TravelGrid లో చేరి మీ సాహసాన్ని ప్రారంభించండి",
+    "subtitle": "planora లో చేరి మీ సాహసాన్ని ప్రారంభించండి",
     "name": "పూర్తి పేరు",
     "namePlaceholder": "మీ పూర్తి పేరు నమోదు చేయండి",
     "email": "ఇమెయిల్ చిరునామా",
