--- a/client/src/locales/ml.json
+++ b/client/src/locales/ml.json
@@ -105,7 +105,7 @@
     "featureDescription": "മറക്കാൻ കഴിയാത്ത സാഹസങ്ങൾ തേടുന്ന ആധുനിക യാത്രക്കാരെക്കുറിച്ച് രൂപകൽപ്പന ചെയ്ത ഞങ്ങളുടെ സമഗ്രമായ പ്ലാറ്റ്‌ഫോമിനൊപ്പം യാത്രയിൽ ഏറ്റവും മികച്ചത് അനുഭവിക്കുക.",
     "whatOur": "ഞങ്ങളുടെ",
     "travelersSay": "യാത്രക്കാർ എന്ത് പറയുന്നു",
-    "testimonialsDescription": "TravelGrid-നൊപ്പം അത്ഭുതകരമായ സ്ഥലങ്ങൾ کشف ചെയ്ത ആയിരക്കണക്കിന് തൃപ്തരായ യാത്രക്കാരിൽ ചേരുക.",
+    "testimonialsDescription": "planora-നൊപ്പം അത്ഭുതകരമായ സ്ഥലങ്ങൾ کشف ചെയ്ത ആയിരക്കണക്കിന് തൃപ്തരായ യാത്രക്കാരിൽ ചേരുക.",
     "features": {
       "greatPrices": {
         "title": "മികച്ച വിലകൾ",
@@ -253,7 +253,7 @@
   },
   "signup": {
     "title": "അക്കൗണ്ട് സൃഷ്ടിക്കുക",
-    "subtitle": "TravelGrid-ൽ ചേരുകയും നിങ്ങളുടെ സാഹസിക യാത്ര ആരംഭിക്കുകയും ചെയ്യൂ",
+    "subtitle": "planora-ൽ ചേരുകയും നിങ്ങളുടെ സാഹസിക യാത്ര ആരംഭിക്കുകയും ചെയ്യൂ",
     "name": "പൂർണ്ണ പേര്",
     "namePlaceholder": "നിങ്ങളുടെ പൂർണ്ണ പേര് നൽകുക",
     "email": "ഇമെയിൽ വിലാസം",
